...
      "name": {
        "type": "String"
      }
    }
  },
  "queueEmpty": "队列中暂无待播歌曲",
  "lyricsTitle": "歌词",
  "lyricsNotPlaying": "未在播放",
  "lyricsNothingPlayingMessage": "播放一首歌曲，即可在这里查看歌词。",
  "lyricsUnavailableTitle": "暂无歌词",
  "lyricsUnavailableMessage": "这首歌还没有歌词。\n尽情享受音乐吧！",
  "lyricsUnsynced": "这些歌词尚未与歌曲同步。",
  "lyricsFromLrclib": "歌词来自 LRCLIB",
...
